--- a/index.html
+++ b/index.html
@@ -62,10 +62,18 @@
             padding-left: 50px;
             padding-right: 50px;
         }
+        #profile-pic img {
+            border-radius: 80px;
+        }
         #bio {
             /* float: right;
             width: 70%; */
             font-size: x-large;
+        }
+        #bio a {
+            color: #125472;
+            font-weight: 500;
+            text-decoration: underline; 
         }
         h2 {
             position: relative;
@@ -265,6 +273,27 @@
             border-radius: 8px;
         }
 
+        .abstract {
+            display: inline;
+        }
+
+        .abstract button {
+            border: none;
+            color: #000000;
+            background-color: #ffffff;
+            /* color: black;
+            background-color: white;
+            border: 3px solid #1e6292; */
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border-radius: 8px;
+        }
+
         .math {
             font-family: "STIX Two Math", "Cambria Math", "Latin Modern Math", "Noto Serif Math", serif;
             /* font-style: italic */
@@ -275,6 +304,7 @@
             var text = document.getElementById("textField");
             text.style.display = "block";
         }
+        
         function toggleTextAltInterior() {
             var text = document.getElementById("textFieldAltInterior");
             if (text.style.display === "none") {
@@ -283,8 +313,18 @@
                 text.style.display = "none";
             }
         }
+        
         function toggleTextChoresTtm() {
             var text = document.getElementById("textFieldChoresTtm");
+            if (text.style.display === "none") {
+                text.style.display = "block";
+            } else {
+                text.style.display = "none";
+            }
+        }
+
+        function toggleTextChoresTtmAbstract() {
+            var text = document.getElementById("textFieldChoresTtmAbstract");
             if (text.style.display === "none") {
                 text.style.display = "block";
             } else {
@@ -317,7 +357,7 @@
                             <br>
                             Welcome! 
                             My name is Tianlong Nan. 
-                            I'm a third-year PhD student in Operations Research at Columbia University, advised by Prof. <a href="https://www.columbia.edu/~ck2945/" target="_blank">Christian Kroer</a>. 
+                            I'm a forth-year PhD student in Operations Research at Columbia University, advised by Prof. <a href="https://www.columbia.edu/~ck2945/" target="_blank">Christian Kroer</a>. 
                             My research focuses on problems at the intersection of optimization, game theory, and artificial intelligence. 
                             I completed my undergraduate studies at Peking University. 
                         </p>
@@ -336,10 +376,10 @@
                     <h2> Research Interest</h2>
                     <!-- items -->
                     <ul>
-                        <li>Large-scale Optimization</li>
                         <li>Algorithmic Game Theory</li>
                         <li>Market Equilibrium</li>
                         <li>Artificial Intelligence</li>
+                        <li>Large-scale Optimization</li>
                         <li>Machine Learning</li>
                     </ul>
                 </div>
@@ -347,8 +387,9 @@
                 <h2>Articles</h2>
                     <ul>
                         <li>
-                            Tâtonnement Dynamics for Fisher Markets with Chores. <em>ACM STOC</em>, 2026.
-                            <p>Bhaskar Ray Chaudhury, Christian Kroer, Ruta Mehta, Tianlong Nan (in alphabetical order).</p>
+                            Tâtonnement Dynamics for Fisher Markets with Chores. 
+                            <p><em>ACM Symposium on Theory of Computing</em>, 2026.</p>
+                            <p>Bhaskar Ray Chaudhury, Christian Kroer, Ruta Mehta, Tianlong Nan (alphabetical order).</p>
                             <div class="ACM-STOC">
                                 <button onclick="toggleTextChoresTtm()">ACM STOC</button>
                             </div> 
@@ -358,11 +399,25 @@
                             <div class="arXiv">
                                 <a href="https://arxiv.org/abs/2511.21162" target="_blank"><button>arXiv</button></a>
                             </div>
+                            <div class="abstract">
+                                <button onclick="toggleTextChoresTtmAbstract()">Abstract</button>
+                            </div>
+                            <div id="textFieldChoresTtmAbstract" style="display: none;font-size:9px">
+                                <p>In this paper, we initiate the study of <em>tâtonnement dynamics in markets with chores</em>. Tâtonnement is a fundamental market dynamic, that captures how prices evolve when they are adjusted in proportion of their excess demand. While its convergence to a competitive equilibrium (CE) is well understood in goods markets for broad classes of utility functions, no analogous results are known for chore markets.</p>
+
+<p>Analyzing tâtonnement in the chores market presents new challenges. Several elegant structural properties that facilitate convergence in goods markets---such as convexity of the equilibrium price set and monotonicity of excess demand under the tâtonnement price updates---<em>fail to hold in the chore setting</em>. Consistent with these difficulties, we first show that <em>naïve tâtonnement</em>, which adjusts prices proportional to the excess demand, diverges even for the simplest case of linear disutilities. To overcome this, we propose a modified process called <em>relative tâtonnement</em>, where prices are updated according to normalized excess demand. We prove its <em>convergence to a CE</em> 
+under suitable step-size choices for a broad class of disutility functions, namely <em>continuous, convex, and 1-homogeneous (CCH)</em> disutilities. This class includes many standard forms such as linear and convex CES disutilities. Our proof proceeds by showing that the relative tâtonnement dynamics correspond to applying generalized gradient methods to a nonsmooth, nonconvex yet regular objective function---<em>a generalization of the objective in the Eisenberg--Gale-type dual program</em> introduced by [CKMN24].</p> 
+
+<p>For the case of <em>CES disutilities</em>, where disutility is the $p$-norm of the individual chore disutilities for <span class="math">p \in (1, ∞)</span>, we show that relative tâtonnement converges to an <span class="math">ε</span>-CE in <span class="math">O(1/ε^2)</span> iterations. This <em>quadratic convergence rate</em> is established by proving smoothness of the associated objective function. We achieve this by interpreting the objective as the <em>polar gauge (or gauge dual)</em> of the disutility function. Typically, smoothness of gauge dual is proven by proving strong convexity of the <em>primal gauge</em>, (in this case, the disutility function). Although CES disutilities are neither strictly nor strongly convex, we are nonetheless able to prove smoothness of their gauge dual, thereby obtaining the desired rate of convergence.</p>
+
+<p>Finally, following the framework of [AH58], we analyze the <em>stability of competitive equilibria</em> under the continuous-time counterpart of our relative tâtonnement dynamics. We provide a complete characterization of local stability and show that the <em>Nash welfare maximizing CE</em> is always locally stable when agents have <em>linear disutilities</em>---offering a new normative justification for their desirability [BMSY17].</p>
+                            </div>
                         </li>
                         <br>
 
                         <li>
-                            On the <span class="math">𝒪(1/T)</span> Convergence of Alternating Gradient Descent-Ascent in Bilinear Games. <em>ICLR</em>, 2026. 
+                            On the <span class="math">𝒪(1/T)</span> Convergence of Alternating Gradient Descent-Ascent in Bilinear Games. 
+                            <p><em>International Conference on Learning Representations</em>, 2026.</p>
                             <p>Tianlong Nan, Shuvomoy Das Gupta, Garud Iyengar, Christian Kroer.</p>
                             <div class="ICLR">
                                 <button onclick="toggleTextAltInterior()">ICLR</button>
@@ -377,7 +432,8 @@
                         <br>
 
                         <li>
-                            On the Convergence of Tâtonnement for Linear Fisher Markets. <em>AAAI</em>, 2025. 
+                            On the Convergence of Tâtonnement for Linear Fisher Markets. 
+                            <p><em>AAAI Conference on Artificial Intelligence (Oral)</em>, 2025.</p> 
                             <p>Tianlong Nan, Yuan Gao, Christian Kroer.</p>
                             <div class="AAAI">
                                 <a href="https://ojs.aaai.org/index.php/AAAI/article/view/33535" target="_blank"><button>AAAI</button></a>
@@ -389,8 +445,9 @@
                         <br>
 
                         <li>
-                            Competitive Equilibrium for Chores: from Dual Eisenberg-Gale to a Fast, Greedy, LP-based Algorithm. <em>ACM EC</em>, 2024.
-                            <p>Bhaskar Ray Chaudhury, Christian Kroer, Ruta Mehta, Tianlong Nan (in alphabetical order).</p>
+                            Competitive Equilibrium for Chores: from Dual Eisenberg-Gale to a Fast, Greedy, LP-based Algorithm.
+                            <p><em>ACM Conference on Economics and Computation</em>, 2024.</p>
+                            <p>Bhaskar Ray Chaudhury, Christian Kroer, Ruta Mehta, Tianlong Nan (alphabetical order).</p>
                             <div class="ACM-EC">
                                 <a href="https://dl-acm-org.ezproxy.cul.columbia.edu/doi/10.1145/3670865.3673516" target="_blank"><button onclick="toggleText()">ACM EC</button></a>
                             </div>
@@ -401,7 +458,8 @@
                         <br>
 
                         <li>
-                            Fast and Interpretable Dynamics for Fisher Markets via Block-Coordinate Updates. <em>AAAI</em>, 2023.
+                            Fast and Interpretable Dynamics for Fisher Markets via Block-Coordinate Updates. 
+                            <p><em>AAAI Conference on Artificial Intelligence (Oral)</em>, 2023.</p>
                             <p>Tianlong Nan, Yuan Gao, Christian Kroer.</p> 
                             <div class="AAAI">
                                 <a href="https://ojs.aaai.org/index.php/AAAI/article/view/25723" target="_blank"><button>AAAI</button></a>
