--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                             <div class="arXiv">
                                 <a href="https://arxiv.org/abs/2511.21162" target="_blank"><button>arXiv</button></a>
                             </div>
-                            <div class="abstract">
+                            <!-- <div class="abstract">
                                 <button onclick="toggleTextChoresTtmAbstract()">Abstract</button>
                             </div>
                             <div id="textFieldChoresTtmAbstract" style="display: none;font-size:9px">
@@ -411,7 +411,7 @@ under suitable step-size choices for a broad class of disutility functions, name
 <p>For the case of <em>CES disutilities</em>, where disutility is the $p$-norm of the individual chore disutilities for <span class="math">p \in (1, ∞)</span>, we show that relative tâtonnement converges to an <span class="math">ε</span>-CE in <span class="math">O(1/ε^2)</span> iterations. This <em>quadratic convergence rate</em> is established by proving smoothness of the associated objective function. We achieve this by interpreting the objective as the <em>polar gauge (or gauge dual)</em> of the disutility function. Typically, smoothness of gauge dual is proven by proving strong convexity of the <em>primal gauge</em>, (in this case, the disutility function). Although CES disutilities are neither strictly nor strongly convex, we are nonetheless able to prove smoothness of their gauge dual, thereby obtaining the desired rate of convergence.</p>
 
 <p>Finally, following the framework of [AH58], we analyze the <em>stability of competitive equilibria</em> under the continuous-time counterpart of our relative tâtonnement dynamics. We provide a complete characterization of local stability and show that the <em>Nash welfare maximizing CE</em> is always locally stable when agents have <em>linear disutilities</em>---offering a new normative justification for their desirability [BMSY17].</p>
-                            </div>
+                            </div> -->
                         </li>
                         <br>
 
