--- a/index.html
+++ b/index.html
@@ -446,6 +446,7 @@ under suitable step-size choices for a broad class of disutility functions, name
 
                         <li>
                             Competitive Equilibrium for Chores: from Dual Eisenberg-Gale to a Fast, Greedy, LP-based Algorithm.
+                            <p>Major Revision at <em>Mathematics of Operations Research</em>.</p>
                             <p><em>ACM Conference on Economics and Computation</em>, 2024.</p>
                             <p>Bhaskar Ray Chaudhury, Christian Kroer, Ruta Mehta, Tianlong Nan (alphabetical order).</p>
                             <div class="ACM-EC">
